--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v2.0.1 (2016-05-22)
+- Downgrade retroarch Version (1.3.2)
+- Included "Check for updates" option in settings
+
 v2.0.0 (2016-05-17)
 - All-in-One addon structure
 - Addon settings with default frontend selection between RetroArch and EmulationStation
