--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 v2.0.1 (2016-05-22)
-- Downgrade retroarch Version (1.3.2)
+- Downgrade RetroArch Version (1.3.2)
 - Included "Check for updates" option in settings
 
 v2.0.0 (2016-05-17)
