--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v2.0.2 (2016-05-26)
+- Kodi 17 alpha version
+- minor updates, bug fixes and code debugging
+
 v2.0.1 (2016-05-22)
 - Downgrade RetroArch Version (1.3.2)
 - Included "Check for updates" option in settings
