--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v2.0.4 (2016-07-15)
+- IARL path to correct zip download.
+- Amiga emulator selection in settings
+- RetroArch updated to 1.3.4 for Open/LibreELEC version
+
 v2.0.3 (2016-06-17)
 - Exit Kodi confirmation can be toggled in settings
 - Minor updates, bug fixes and code debugging
