--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+v2.1.0 (2016-07-27)
+- RetroArch 1.3.6
+- CaveStory, Quake and Doom ports included.
+- mame2003-libretro core update including Hiscores and config data for settings.
+- UAE4ARM-libretro core configs
+- New crt-pi shader for RetroArch
+- Minor updates, bug fixes and code debugging
+
 v2.0.4 (2016-07-15)
 - IARL path to correct zip download.
 - Amiga emulator selection in settings
