--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v2.1.1 (2016-08-07)
+- Debug log included
+- RetroArch playlist bug fix
+- Minor updates, bug fixes and code debugging
+
 v2.1.0 (2016-07-27)
 - RetroArch 1.3.6
 - CaveStory, Quake and Doom ports included.
