--- a/script.gamestarter/changelog.txt
+++ b/script.gamestarter/changelog.txt
@@ -1,6 +1,8 @@
-v2.3.0 (2016-09-09)
+v2.3.0 (2016-09-10)
 - Improve gamestarter.log.
 - AEL as frontend for LE8 alpha version.
+- SCUMMVM libretro core included.
+- UAE4ARM as an optional installaton.
 - Change github directories structure.
 - Minor updates, bug fixes and code debugging.
 
