--- a/script.gamestarter/changelog.txt
+++ b/script.gamestarter/changelog.txt
@@ -2,7 +2,7 @@ v2.9.0 (2017-06-06)
 - RetroArch 1.6.0
 - RetroArch update option in addon settings
 - Libretro cores update option in addon settings
-- Logs path move to /storage/.kodi/temp
+- Logs path moved to /storage/.kodi/temp
 - Minor updates, bug fixes and code debugging
 
 v2.8.0 (2017-04-30)
