move splash file

--- a/script.gamestarter/changelog.txt
+++ b/script.gamestarter/changelog.txt
@@ -1,7 +1,8 @@
 v2.9.0 (2017-06-06)
 - RetroArch 1.6.0
 - RetroArch update option in addon settings
-- Libretro cores update option in addon settings
+- Libretro cores removed except for most popular ones
+- Libretro cores update/download option within RetroArch
 - Logs path moved to /storage/.kodi/temp
 - Minor updates, bug fixes and code debugging
 
