--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,5 +1,7 @@
-v0.0.4:
+v0.0.5:
 -
+v0.0.4:
+- Code debugging WIP
 v0.0.3:
 - Libretro Cores full package download
 - RetroPlayer cores use option toggle
