--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,3 +1,7 @@
+v8.167.1:
+- RetroArch 1.6.7
+- Assets, info & autoconfigs update (20170818)
+- Code optimization
 v8.164.1:
 - Ports launch from external FE
 - New version naming (LE_version.Retroarch_version.addon_version)
