--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,3 +1,6 @@
+v8.167.2:
+- Generic retroarch.cfg file (download cores using RA's online updater)
+- Generic core package download fix
 v8.167.1:
 - RetroArch 1.6.7
 - Assets, info & autoconfigs update (20170818)
