--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,3 +1,6 @@
+v8.167.5:
+- Code fixes in retroarch config files
+- RetroArch 40cfde0 + updated assets
 v8.167.4:
 - Back to AEL launcher window if using AEL frontend for direct launch
 - Remove ES ignore gamelists flag for scraping
