--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,3 +1,6 @@
+v8.174.11:
+- Additional libs for LE9 Alpha Releases (Gen&RPi)
+- Retroarch 1.7.4 (02e23be)
 v8.173.10:
 - Retroarch 1.7.3 (91744d9)
 v8.170.9:
