--- a/repository.gamestarter/game.retroarch/changelog.txt
+++ b/repository.gamestarter/game.retroarch/changelog.txt
@@ -1,3 +1,5 @@
+v8.175.12:
+- Retroarch 1.7.5 (c9c6c5a)
 v8.174.11:
 - Additional libs for LE9 Alpha Releases (Gen&RPi)
 - Retroarch 1.7.4 (02e23be)
